@@ -1,6 +1,11 @@
 2003-02-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
-	* [w3m-dev-en 00867] Re: w3m 0.4 release candidate 1
+	* [w3m-dev-en 00868] fix mark_all_pages
+	* anchor.c (reAnchorAny): next_line process for MarkAllPages
+
+2003-02-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev-en 00867] fix installation problem
 	* XMakefile (install-core): test AUXBIN_TARGETS
 
 2003-02-11  Fumitoshi UKAI  <ukai@debian.or.jp>
@@ -7142,4 +7147,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.747 2003/02/11 10:33:04 ukai Exp $
+$Id: ChangeLog,v 1.748 2003/02/11 10:35:48 ukai Exp $
